# milllii-backend

./: .dockerignore  .env  .gitignore  Dockerfile  EMAIL_SETUP.md  config.py  dependencies.py  pyproject.toml  requirements.txt  server.py  start_server.bat
models/: __init__.py  email.py
routes/: email_routes.py
scripts/: reset_workspace.py
services/: email_service.py  email_templates.py  ghl_email_client.py
utils/: cache.py  cache_invalidation.py  pagination.py  response_optimization.py
